# awokadodl

./: .gitignore  Cargo.toml  README.md
src/: comic_scraper.rs  main.rs
src/comic_scraper/: ww5_mangakakalot_tv.rs
