[package]
name = "awokadodl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"

strum = "0.24"
strum_macros = "0.24"

clap = { version = "3.1.6", features = ["derive"] }

